--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   flutter_custom_tabs:
     git: git://github.com/ohze/flutter_custom_tabs.git
   html: ^0.13.3+3
-  video_player: 0.10.0+2
-  cached_network_image: ^0.6.0+1
+  video_player: 0.10.1+6
+  cached_network_image: ^1.1.1
 
   flutter_markdown: ^0.2.0
   html2md: ^0.3.0
