--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,23 @@ dependencies:
   path_provider: ^1.2.0
   flutter_custom_tabs:
     git: git://github.com/ohze/flutter_custom_tabs.git
-  html: ^0.14.0+2
   video_player: 0.10.1+6
   cached_network_image: ^1.1.1
   flutter_cache_manager: ^1.1.1
 
-  flutter_markdown:
-    path: flutter_markdown/
-  html2md:
-    path: html2md/
+  #flutter_markdown
+  markdown: ^2.0.0
+  meta: ^1.0.5
+  string_scanner: ^1.0.0
+  #html2md
+  html: ^0.14.0+2
 
+dev_dependencies:
+  test: ^1.3.0
+  flutter_test:
+    sdk: flutter
+  mockito: ^3.0.0
 
 environment:
-
   sdk: ">=2.1.0 <3.0.0"
   flutter: ">=0.1.4 <2.0.0"
